--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,268 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&family=Source+Sans+Pro:wght@400;600;700;900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Rubik";
+  background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 20%, rgba(253,29,29,1) 100%);
+}
+
+h3{
+  width: 30%;
+  margin-right: 10px;
+  margin-top: 3px;
+  text-align: right;
+  color: darkgray;
+}
+
+h4{
+  margin-top: 3px;
+  margin-left: 10px;
+  width: 60%;
+  text-align: left;
 }
 
 a {
-  color: inherit;
+  color: #92badd;
+  display: inline-block;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.container{
+  display: block;
+  padding: 0px;
+  margin: 0px 0px 0px 0px;
+  width: 100%;
+}
+
+.wrapper{
+  text-align: center;
+  width:40%;
+  max-width: 620px;
+  margin-left: 30%;
+  margin-right: 30%;
+  height:auto;
+  padding:10px;
+}
+
+.topnav{
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.center-topnav{
+  width: 100%;
+  max-width: 620px;
+  height: 40px;
+  position: relative;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.topnav-wrapper{
+  height: auto;
+  display: flex;
+  vertical-align: middle;
+}
+
+.topnav-items{
+  width:60%;
+  text-align: right;
+}
+
+.progress-bar{
+  width: 100%;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.logo{
+  text-align: left;
+  width:45%;
+  padding: 2px;
+}
+
+.icon{
+  width:16px;
+  height:16px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.btn-topnav{
+  padding: 6px 8px 6px 8px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.233);
+  margin-inline: 5px;
+  font-size: 14px;
+}
+
+.content{
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+  justify-content: center;
+  width: 100%;
+  min-height: 100%;
+}
+
+.time-content{
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.137);
+  padding: 20px;
+  width: 90%;
+  max-width: 450px;
+  position: relative;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 10px 30px 0 rgba(0,0,0,0.3);
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.time-navbar{
+  margin-bottom: 25px;
+  justify-content: space-between;
+}
+
+.btn-nav{
+  padding: 5px;
+  color: white;
+  border: none;
+  margin-inline: 5px;
+}
+
+.btn-nav.active {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border-radius: 5px;
+  font-weight: 900;
+  padding: 5px 10px 5px 10px;
+}
+
+.btn-nav:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border-radius: 5px;
+}
+
+.clock{
+  font-size: 96px;
+  color: white;
+  font-weight: 900;
+  margin-bottom: 25px;
+}
+
+.start-button {
+  background-color: #fff;
+  border: none;
+  color: #d95550;
+  padding: 15px 60px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 900;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.start-button:hover{
+  transform: scale(1.1);
+}
+
+.task-list{
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+  justify-content: center;
+  width: 100%;
+  min-height: 100%;
+}
+
+.counter{
+  color: rgba(255, 255, 255, 0.75);
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.center-task-list{
+  width: 85%;
+  max-width: 500px;
+  position: relative;
+}
+
+.task-title{
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+.task-setting{
+  margin-top: 20px;
+  margin-bottom: 5px;
+  display: flex;
+  height: auto;
+  vertical-align: middle;
+}
+
+.task-setting-title{
+  width: 80%;
+  text-align: left;
+  font-size: 18px;
+  color: white;
+}
+
+.task-setting-menu{
+  text-align: right;
+  width: 20%;
+}
+
+.task-card{
+  margin-top: 20px;
+  background-color: rgb(255, 255, 255);
+  height: 64px;
+  border-radius: 5px;
+  display: flex;
+}
+
+.task-card-wrapper{
+  margin:20px;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.task-card-ornament{
+  width: 2%;
+  height: 100%;
+  background-color: rgba(153, 148, 150, 0.8);
+  border-radius: 5px 0px 0px 5px;
+}
+
+.task-add-card{
+  margin-top: 20px;
+  border: rgba(255, 255, 255, 0.25) dashed;
+  height: 64px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.233);
+  text-align: center;
+}
+
+.icon-add{
+  width: 100%;
+  height: 20px;
+  margin-top: 20%;
+  margin-bottom: 20%;
+}
+
+.footer{
+  height: 25px;
+  background-color: yellow;
 }
