--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,12 +30,36 @@ a {
   text-decoration: none;
 }
 
-.avatar{
-  width: 120px;
-  height: 120px;
+.avatar-wrapper{
   position: absolute;
   bottom: 8px;
   right: 16px;
+}
+
+.avatar{
+  width: 120px;
+  height: 120px;
+}
+
+.avatar:hover{
+  cursor: pointer;
+}
+
+.avatar-wrapper .avatar-tooltip {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  font-size: small;
+}
+
+.avatar-wrapper:hover .avatar-tooltip {
+  visibility: visible;
 }
 
 .container{
